Tweak rsync to not preserve owner

--- a/05-repoupdate.service
+++ b/05-repoupdate.service
@@ -5,3 +5,5 @@ Description=Updates CentOS and EPEL yum repositories.
 Type=simple
 ExecStart=/usr/local/sbin/repoupdate
 StandardOutput=syslog
+User=root
+Group=www-data
