Some changes and bugfixes:
* Changed systemd service to confirm sync by defualt
* Added missing securityonion module to rsync config
* Fixed downstream logic also triggering upstream sync
* Fixed mirror connection check for downstream sync
* Added a timer to show elapsed time for sync
* All lines now under 100 chars in length

--- a/rsyncd.conf
+++ b/rsyncd.conf
@@ -47,6 +47,15 @@ pid file = /var/run/rsyncd.pid
     list = yes
     use chroot = false
 
+[securityonion]
+    path = /srv/repository/securityonion
+    comment = Security Onion Repository
+    uid = rsync
+    gid = rsync
+    read only = yes
+    list = yes
+    use chroot = false
+
 [clamav]
     path = /srv/repository/clamav
     comment = ClamAV Repository
