Changes to rc5 version:
* Added docker repo (ubuntu only, at the moment)
* Fix mirror connection check logic for upstream
* Tweak timer function to allow incrementing index

--- a/rsyncd.conf
+++ b/rsyncd.conf
@@ -11,9 +11,18 @@ pid file = /var/run/rsyncd.pid
     list = yes
     use chroot = false
 
-[fedora-epel]
-    path = /srv/repository/epel
-    comment = EPEL Repository
+[clamav]
+    path = /srv/repository/clamav
+    comment = ClamAV Repository
+    uid = rsync
+    gid = rsync
+    read only = yes
+    list = yes
+    use chroot = false
+
+[docker]
+    path = /srv/repository/docker
+    comment = Docker Repository
     uid = rsync
     gid = rsync
     read only = yes
@@ -38,9 +47,18 @@ pid file = /var/run/rsyncd.pid
     list = yes
     use chroot = false
 
-[ubuntu]
-    path = /srv/repository/ubuntu
-    comment = Ubuntu Repository
+[fedora-epel]
+    path = /srv/repository/epel
+    comment = EPEL Repository
+    uid = rsync
+    gid = rsync
+    read only = yes
+    list = yes
+    use chroot = false
+
+[local]
+    path = /srv/repository/local
+    comment = Local Repository
     uid = rsync
     gid = rsync
     read only = yes
@@ -56,18 +74,9 @@ pid file = /var/run/rsyncd.pid
     list = yes
     use chroot = false
 
-[clamav]
-    path = /srv/repository/clamav
-    comment = ClamAV Repository
-    uid = rsync
-    gid = rsync
-    read only = yes
-    list = yes
-    use chroot = false
-
-[local]
-    path = /srv/repository/local
-    comment = Local Repository
+[ubuntu]
+    path = /srv/repository/ubuntu
+    comment = Ubuntu Repository
     uid = rsync
     gid = rsync
     read only = yes
