Move everything into specific directories
- All documentation now in the docs/ directory
- All code now in the src/ directory
- All gitmodules now in the modules/ directory
- LICENSE.md stays in the project root directory

Signed-off-by: Eddie Carswell <eddiecarswell13@yahoo.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "clamavmirror"]
-	path = clamavmirror
+	path = modules/clamavmirror
 	url = https://github.com/akissa/clamavmirror
 [submodule "debmirror"]
-	path = debmirror
+	path = modules/debmirror
 	url = https://salsa.debian.org/debian/debmirror
